Equation Game Implemented